; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_mtu.c_set_mtu_discover_type.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_mtu.c_set_mtu_discover_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@M_FATAL = common dso_local global i32 0, align 4
@MTUDISC_NOT_SUPPORTED_MSG = common dso_local global i32 0, align 4
@IPPROTO_IP = common dso_local global i32 0, align 4
@IPPROTO_IPV6 = common dso_local global i32 0, align 4
@IPV6_MTU_DISCOVER = common dso_local global i32 0, align 4
@IP_MTU_DISCOVER = common dso_local global i32 0, align 4
@M_ERR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_mtu_discover_type(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = icmp sge i32 %7, 0
  br i1 %8, label %9, label %18

9:                                                ; preds = %3
  %10 = load i32, i32* %6, align 4
  switch i32 %10, label %11 [
  ]

11:                                               ; preds = %9
  %12 = load i32, i32* @M_FATAL, align 4
  %13 = load i32, i32* @MTUDISC_NOT_SUPPORTED_MSG, align 4
  %14 = sext i32 %13 to i64
  %15 = inttoptr i64 %14 to i8*
  %16 = call i32 (i32, i8*, ...) @msg(i32 %12, i8* %15)
  br label %17

17:                                               ; preds = %11
  br label %18

18:                                               ; preds = %17, %3
  ret void
}

declare dso_local i32 @msg(i32, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
